--- a/templates/web/quiz_multiple_mode.html
+++ b/templates/web/quiz_multiple_mode.html
@@ -1,220 +1,228 @@
 <!DOCTYPE html>
 <!--
-    Created by HIR0Y0SHI on 2017/05/31
+		Created by HIR0Y0SHI on 2017/05/31
 
-    複数で遊ぶ画面のHTML
+		複数で遊ぶ画面のHTML
  -->
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_multi.css">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="/tobe_master/public/css/web/import_multi.css">
     <title>めざせ！とべマスター</title>
 </head>
+
 <body>
-<div class="contentIn">
-	
-	<!--繰り返し用のdiv-->
-	<div id="quizRepeat">
-		<!-- プレイヤー確認画面 -->
-		<div class="playerConfirm">
-			<h2>プレイヤー確認</h2>
-			<div class="playerArea">
-				<p><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
-				<p class="playerName">あなたは<span class="animal">シロクマ</span>さんですか？</p>
-			</div>
-			<div class="outputQuestion">
-				<button type="button" class="btnStyle03 outputQuestion" value="">はい</button>
-			</div>
-		</div>
+    <div class="contentIn">
 
-		<!-- クイズ出題画面 -->
-		<div class="sec01 active">
-			<div class="swiper-container">
-				<ul class="swiper-wrapper slider questionImg">
-					<li class="swiper-slide">
-						<img src="/tobe_master/public/images/web/dummy.png" alt="">
-					</li>
-					<li class="swiper-slide">
-						<img src="/tobe_master/public/images/web/dummy.png" alt="">
-					</li>
-				</ul>
-				<div class="swiper-pagination"></div>
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-			</div>
-			<div class="questionArea">
-				<div class="inner">
-					<p class="tC">第<span class="questionNo">1</span>問</p>
-					<p class="questionText">この動物はカピバラ？それともヌートリア？</p>
-				</div>
-			</div>
-			<div class="time"><div class="timebar"></div></div>
-			<div class="playerArea">
-				<p><img src="/tobe_master/public/images/web/ico_animal01.png" alt="" class="icon"></p>
-				<p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
-			</div>
-			<ul class="answerArea">
-				<li><button type="button" id="correct" class="answerBtn btnStyle01" value="">オーストラリア</button></li>
-				<li><button type="button" id="incorrect" class="answerBtn btnStyle02" value="">オーストラリア</button></li>
-			</ul>
-		</div>
-	</div><!--quizRepeat-->
+        <!--繰り返し用のdiv-->
+        <div id="quizRepeat">
+            <!-- プレイヤー確認画面 -->
+            <div class="playerConfirm">
+                <h2>プレイヤー確認</h2>
+                <div class="playerArea">
+                    <p><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
+                    <p class="playerName">あなたは<span class="animal">シロクマ</span>さんですか？</p>
+                </div>
+                <div class="outputQuestion">
+                    <button type="button" class="btnStyle03 outputQuestion" value="">はい</button>
+                </div>
+            </div>
 
-	<!-- 解答画面 -->
-	<div class="sec02">
-		<ul class="swiper-wrapper slider questionImg">
-			<li class="swiper-slide">
-				<img src="/tobe_master/public/images/web/dummy.png" alt="">
-			</li>
-			<li class="swiper-slide">
-				<img src="/tobe_master/public/images/web/dummy.png" alt="">
-			</li>
-		</ul>
-		<div class="textArea question">
-			<div class="inner">
-				<p class="tC">第<span class="questionNo">1</span>問</p>
-				<p class="questionText">正解は…</p>
-			</div>
-		</div>
-		
-		<div class="correctArea">
-			<p class="answerBtn btnStyle02">あああああ</p>
-		</div>
-		<div class="next">
-			<button type="button" class="btnStyle03" value="">解説へ</button>
-		</div>
-	</div>
+            <!-- クイズ出題画面 -->
+            <div class="sec01 active">
+                <div class="swiper-container">
+                    <ul class="swiper-wrapper slider questionImg">
+                        <li class="swiper-slide">
+                            <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                        </li>
+                    </ul>
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
+                </div>
+                <div class="questionArea">
+                    <div class="inner">
+                        <p class="tC">第<span class="questionNo">1</span>問</p>
+                        <p class="questionText">この動物はカピバラ？それともヌートリア？</p>
+                    </div>
+                </div>
+                <div class="time">
+                    <div class="timebar"></div>
+                </div>
+                <div class="playerArea">
+                    <p><img src="/tobe_master/public/images/web/ico_animal01.png" alt="" class="icon"></p>
+                    <p class="playerName"><span class="animal">シロクマ</span>さんのターン</p>
+                </div>
+                <ul class="answerArea">
+                    <li><button type="button" id="correct" class="answerBtn btnStyle01" value="">オーストラリア</button></li>
+                    <li><button type="button" id="incorrect" class="answerBtn btnStyle02" value="">オーストラリア</button></li>
+                </ul>
+            </div>
+        </div>
+        <!--quizRepeat-->
 
-	<!-- 解説画面 -->
-	<div class="sec03">
-		<ul class="swiper-wrapper slider questionImg">
-			<li class="swiper-slide">
-				<img src="/tobe_master/public/images/web/dummy.png" alt="">
-			</li>
-			<li class="swiper-slide">
-				<img src="/tobe_master/public/images/web/dummy.png" alt="">
-			</li>
-		</ul>
-		<div class="textArea answer">
-			<div class="inner">
-				<p class="tC">第<span class="questionNo">1</span>問</p>
-				<p class="answerText">解説！</p>
-			</div>
-		</div>
-		<div class="commentaryArea">
-			<p>ヌートリアは、カピパラと比べ前歯が見えやすく色もオレンジ色をしています。また、ヌートリアには長い尻尾がありますがカピバラにはありません。</p>
-		</div>
-		<div class="next">
-			<button type="button" class="btnStyle03" value="">みんなの解答結果へ</button>
-		</div>
-	</div>
+        <!-- 解答画面 -->
+        <div class="sec02">
+            <ul class="swiper-wrapper slider questionImg">
+                <li class="swiper-slide">
+                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                </li>
+                <li class="swiper-slide">
+                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                </li>
+            </ul>
+            <div class="textArea question">
+                <div class="inner">
+                    <p class="tC">第<span class="questionNo">1</span>問</p>
+                    <p class="questionText">正解は…</p>
+                </div>
+            </div>
 
-	<!-- みんなの解答結果画面 -->
-	<div class="sec04">
-		<div class="inner">
-			<div class="correctPlayer">
-				<h3>正解者</h3>
-				<ul class="playerList02">
-					<li>
-						<img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
-					</li>
-					<li>
-						<img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
-					</li>
-					<li>
-						<img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
-					</li>
-				</ul>
-			</div>
-			<div class="incorrectPlayer">
-				<h3>不正解者</h3>
-				<ul class="playerList02">
-					<li>
-						<img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
-					</li>
-				</ul>
-			</div>
-			<div class="dropoutPlayer">
-				<h3>脱落者</h3>
-				<ul class="playerList02">
-					<li>
-						<img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
-					</li>
-				</ul>
-			</div>
-			<div class="next">
-				<button type="button" class="btnStyle03" value="">次の問題へ</button>
-			</div>
-		</div>
-	</div>
+            <div class="correctArea">
+                <p class="answerBtn btnStyle02">あああああ</p>
+            </div>
+            <div class="next">
+                <button type="button" class="btnStyle03" value="">解説へ</button>
+            </div>
+        </div>
 
-	<!-- ゲームオーバー画面 -->
-	<div class="gameover">
-		<h2>GAME OVER</h2>
-		<ul class="playerList03">
-			<li>
-				<p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
-				<div class="text">
-					<p class="playerName">シロクマ</p>
-					<p class="correct">正解数：<span class="num">4</span></p>
-				</div>
-			</li>
-			<li>
-				<p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
-				<div class="text">
-					<p class="playerName">カンガルー</p>
-					<p class="correct">正解数：<span class="num">0</span></p>
-				</div>
-			</li>
-		</ul>
-		<ul class="btnList03">
-			<li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
-			<li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
-		</ul>
-	</div>
+        <!-- 解説画面 -->
+        <div class="sec03">
+            <ul class="swiper-wrapper slider questionImg">
+                <li class="swiper-slide">
+                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                </li>
+                <li class="swiper-slide">
+                    <img src="/tobe_master/public/images/web/dummy.png" alt="">
+                </li>
+            </ul>
+            <div class="textArea answer">
+                <div class="inner">
+                    <p class="tC">第<span class="questionNo">1</span>問</p>
+                    <p class="answerText">解説！</p>
+                </div>
+            </div>
+            <div class="commentaryArea">
+                <p>ヌートリアは、カピパラと比べ前歯が見えやすく色もオレンジ色をしています。また、ヌートリアには長い尻尾がありますがカピバラにはありません。</p>
+            </div>
+            <div class="next">
+                <button type="button" class="btnStyle03" value="">みんなの解答結果へ</button>
+            </div>
+        </div>
 
-	<!-- ゲームクリア画面 -->
-	<div class="gameclear">
-		<h2>GAME CLEAR</h2>
-		<ul class="playerList03">
-			<li>
-				<p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
-				<div class="text">
-					<p class="master">MASTER</p>
-					<p class="playerName">シロクマ</p>
-					<p class="correct">正解数：<span class="num">10</span></p>
-				</div>
-			</li>
-			<li>
-				<p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
-				<div class="text">
-					<p class="playerName">カンガルー</p>
-					<p class="correct">正解数：<span class="num">0</span></p>
-				</div>
-			</li>
-			<li>
-				<p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
-				<div class="text">
-					<p class="playerName">シロクマ</p>
-					<p class="correct">正解数：<span class="num">4</span></p>
-				</div>
-			</li>
-			<li>
-				<p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
-				<div class="text">
-					<p class="playerName">カンガルー</p>
-					<p class="correct">正解数：<span class="num">0</span></p>
-				</div>
-			</li>
-		</ul>
-		<ul class="btnList03">
-			<li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
-			<li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
-		</ul>
-	</div>
-</div>
-	<script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>
+        <!-- みんなの解答結果画面 -->
+        <div class="sec04">
+            <div class="inner">
+                <div class="correctPlayer">
+                    <h3>正解者</h3>
+                    <ul class="playerList02">
+                        <li>
+                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+                        </li>
+                        <li>
+                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+                        </li>
+                        <li>
+                            <img src="/tobe_master/public/images/web/ico_animal02.png" alt=""><span>シロクマ</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="incorrectPlayer">
+                    <h3>不正解者</h3>
+                    <ul class="playerList02">
+                        <li>
+                            <img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="dropoutPlayer">
+                    <h3>脱落者</h3>
+                    <ul class="playerList02">
+                        <li>
+                            <img src="/tobe_master/public/images/web/ico_animal04.png" alt=""><span>カンガルー</span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="next">
+                    <button type="button" class="btnStyle03" value="">次の問題へ</button>
+                </div>
+            </div>
+        </div>
+
+        <!--ここで繰り返し終わり-->
+
+        <!-- ゲームオーバー画面 -->
+        <div class="gameover">
+            <h2>GAME OVER</h2>
+            <ul class="playerList03">
+                <li>
+                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
+                    <div class="text">
+                        <p class="playerName">シロクマ</p>
+                        <p class="correct">正解数：<span class="num">4</span></p>
+                    </div>
+                </li>
+                <li>
+                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
+                    <div class="text">
+                        <p class="playerName">カンガルー</p>
+                        <p class="correct">正解数：<span class="num">0</span></p>
+                    </div>
+                </li>
+            </ul>
+            <ul class="btnList03">
+                <li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
+                <li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
+            </ul>
+        </div>
+
+        <!-- ゲームクリア画面 -->
+        <div class="gameclear">
+            <h2>GAME CLEAR</h2>
+            <ul class="playerList03">
+                <li>
+                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
+                    <div class="text">
+                        <p class="master">MASTER</p>
+                        <p class="playerName">シロクマ</p>
+                        <p class="correct">正解数：<span class="num">10</span></p>
+                    </div>
+                </li>
+                <li>
+                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
+                    <div class="text">
+                        <p class="playerName">カンガルー</p>
+                        <p class="correct">正解数：<span class="num">0</span></p>
+                    </div>
+                </li>
+                <li>
+                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal01.png" alt=""></p>
+                    <div class="text">
+                        <p class="playerName">シロクマ</p>
+                        <p class="correct">正解数：<span class="num">4</span></p>
+                    </div>
+                </li>
+                <li>
+                    <p class="image"><img src="/tobe_master/public/images/web/ico_animal03.png" alt=""></p>
+                    <div class="text">
+                        <p class="playerName">カンガルー</p>
+                        <p class="correct">正解数：<span class="num">0</span></p>
+                    </div>
+                </li>
+            </ul>
+            <ul class="btnList03">
+                <li><button type="button" class="btnStyle04" value="">再挑戦する</button></li>
+                <li><button type="button" class="btnStyle05" value="">TOPへ戻る</button></li>
+            </ul>
+        </div>
+    </div>
+    <script src="/tobe_master/public/js/multi_import.js" type="text/javascript" charset="utf-8"></script>
 </body>
+
 </html>
